--- a/index.html
+++ b/index.html
@@ -4,16 +4,151 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hind Tijani</title>
-    <meta name="description" content="Web Devoloper...">
-    <meta name="keywords" content="tijani,hind,website,devolopper,">
-    <link rel="stylesheet" href="css/styje.css">
-    <link rel="link rel="preconnect href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Hind tijani</title>
 </head>
 <body>
-    
-    
+    <header>
+        <a href="#" class="logo">Hind tijani</a>
+        <nav class="navigation">
+             <a href="#servises">servises</a>
+             <a href="#projects">projects</a>
+             <a href="#contact">contact</a>      
+    </nav>
+    </header>
+    <section class="main">
+        <div class="avatar" >
+            <img src="./imagespor/avatar-femme-brune.png" alt="avatar image">
+        </div>
+        <div>
+           <h2>Hello, im Hind<br><span>Website Developper</span></h2> 
+           <h3>I build websites</h3>
+           <a href="#projects" class="main-btn">view my work</a>
+           <div class="social-icons">
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+           </div>
+        </div>
+</section> 
+<section class="cards" id="servises">
+    <h2 class="title">servises</h2>
+    <div class="content">
+    <div class="card">
+        <div class="icon">
+        <i class="fas fa-tv"></i>
+    </div>
+    <div class="info">
+        <h3>web developemt</h3>
+        <p>develop a website that exceeds your business goals</p>
+    </div>
+    </div>
+<div class="card">
+    <div class="icon">
+        <i class="fab fa-uncharted"></i>
+</div>
+<div class="info">
+    <h3>web & and saas applications</h3>
+    <p>Receive the best front- and back-end coding in the industry with highly skilled and trained engineers.</p>
+</div>
+</div>
+</div>
+<div class="card">
+    <div class="icon">
+        <i class="fas fa-pencil-alt"></i>
+    </div>
+    <div class="info">
+    <h3>graphic design</h3>
+    <p>we’re not just any graphic design agency.</p>
+    </div>
+</div>
+</div>
+</div>
+</section>
+<section class="projects" id="projects">
+    <h2 class="title">projects</h2>
+    <div class="content">
+        <div class="project-card">
+            <div class="project-image">
+             <img src="imagespor\Website Creator-cuate.svg">   
+            </div>
+            <div class="project-info">
+                <p class="project-category"></p>
+                <strong class="project-title">
+                <span> xxx</span>
+                <a href="#" class="more-details">more details</a>
+                </strong>
+
+            </div>
+        </div>
+    </div>
+    <div class="project-card">
+        <div class="project-image">    
+             <img src="imagespor\Website Creator-rafiki.svg">   
+        </div>
+        <div class="project-info">
+            <p class="project-category"></p>
+            <strong class="project-title">
+            <span> xxx</span>
+            <a href="#" class="more-details">more details</a>
+            </strong>
+        </div>
+            </div>
+        </div>
+</section>
+<section class="cards contact" id="contact">
+    <h2 class="title">lets work togrther</h2>
+    <div class="content">
+        <div class="card">
+            <div class="icon">
+                <i class="fas fa-phone"></i>
+        </div>
+        <div class="info">
+            <h3>phone</h3>
+            <p>777 777 777</p>
+        </div>
+        </div>
+    <div class="card">
+        <div class="icon">
+            <i class="fas fa-at"></i>
+    </div>
+    <div class="info">
+        <h3>email</h3>
+        <p>nishi@gmail.com</p>
+    </div>
+    </div>
+    </div>
+</section>
+<footer class="footer">
+    <P class="footer-title">copyrights @ <span>Hind Tijani</span></P>
+        <div class="social-icons">
+         <a href="#"><i class="fab fa-github"></i></a>
+         <a href="#"><i class="fab fa-facebook"></i></a>
+         <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+</footer>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
 </body>
 </html>
